gtk-3.0/gtk-widgets-dark.css
/* fix colors for dark widgets */

/*****************
 * notebook *
 *****************/

.notebook tab {
    background-color: shade(@theme_bg_color, 1.35);
    background-image: none;
    border-color: shade(@theme_bg_color, 0.9);
}

/************
 * menuitem *
 ************/

.menuitem:hover,
.menu .menuitem:hover,
.menubar.menuitem:hover,
.menubar .menuitem:hover {
    background-image: -gtk-gradient(linear, left top, left bottom,
                                     from (shade(@theme_selected_bg_color, 0.85)),
                                     to (shade(@theme_selected_bg_color, 0.8)));
    border-color: shade(@theme_selected_bg_color, 0.7);
}

/*****************
 * column-header *
 *****************/

column-header .button {
    background-image: -gtk-gradient(linear, left top, left bottom,
                                     from (shade(shade(@theme_base_color, 0.95), 0.98)),
                                     to (shade(shade(@theme_base_color, 0.95), 1.35)));
    color: @theme_text_color;
}

column-header .button:hover {
    background-image: -gtk-gradient(linear, left top, left bottom,
                                     from (shade(shade(@theme_base_color, 0.8), 0.98)),
                                     to (shade(shade(@theme_base_color, 0.8), 1.35)));
}

/*************
 * scrollbar *
 *************/

.scrollbar.trough,
.scrollbar.trough.vertical,
.scrollbar.trough.horizontal {
    background-color: shade(@theme_base_color, 0.65);
}

/****************
 * row *
 ****************/

row:selected,
row:selected:focus {
    background-image: -gtk-gradient(linear, left top, left bottom,
                                     from (shade(@theme_selected_bg_color, 1.0)),
                                     to (shade(@theme_selected_bg_color, 1.0)));
}

/***********
 * toolbar *
 ***********/

.primary-toolbar .raised .button,
.primary-toolbar .raised.button,
.primary-toolbar .button:hover,
.primary-toolbar .button:active,
.primary-toolbar .button:insensitive {
    background-image: -gtk-gradient(linear, left top, left bottom,
                                     from (shade(shade(@theme_bg_color, 0.9), 1.05)),
                                     to (shade(shade(@theme_bg_color, 0.9), 0.97)));
    border-color: shade(@theme_bg_color, 0.5);
    box-shadow: inset 1px 1px alpha(@theme_base_color, 0.15),
                inset -1px 0 alpha(@theme_base_color, 0.15);
}

.primary-toolbar .button:active:hover {
    background-image: -gtk-gradient(linear, left top, left bottom,
                                     from (shade(shade(@theme_bg_color, 0.9), 1.05)),
                                     to (shade(shade(@theme_bg_color, 0.9), 0.97)));
   border-color: shade(@theme_bg_color, 0.5);
    box-shadow: inset 1px 1px alpha(@theme_base_color, 0.15),
                inset -1px 0 alpha(@theme_base_color, 0.15);
}

